--- a/bio1.html
+++ b/bio1.html
@@ -37,10 +37,10 @@
 		<div>
 			
 			<div class="article">
-				<h4>Sistema dos Gases</h4>
+				<h4>Sistema Respiratório Humano</h4>
 				
 				<div class="container">
-				  <embed src="files/bio/sg.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
+				  <embed src="files/bio/sr.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
 				</div>
 				
 			</div>
