--- a/bio2.html
+++ b/bio2.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Biologia/Transporte dos gases respiratórios - Cefhub</title>
+	<title>Biologia/Transporte de gases respiratórios - Cefhub</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -68,7 +68,7 @@
 		<div>
 			
 			<div class="article">
-				<h4>Transporte dos Gases Respiratórios</h4>
+				<h4>Transporte de Gases Respiratórios</h4>
 				
 				<div class="container">
 				  <embed src="files/bio/tdg.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
