--- a/bio2.html
+++ b/bio2.html
@@ -68,7 +68,7 @@
 		<div>
 			
 			<div class="article">
-				<h4>Transporte de Gases Respiratórios</h4>
+				<h4>Transporte de Gases Respiratórios pdf</h4>
 				
 				<div class="container">
 				  <embed src="files/bio/tdg.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
