--- a/bio3.html
+++ b/bio3.html
@@ -68,7 +68,7 @@
 		<div>
 			
 			<div class="article">
-				<h4>Sistema Respiratório das Aves</h4>
+				<h4>Sistema Respiratório das Aves (PDF)</h4>
 				
 				<div class="container">
 				  <embed src="files/bio/srda.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
