--- a/bio4.html
+++ b/bio4.html
@@ -68,7 +68,7 @@
 		<div>
 			
 			<div class="article">
-				<h4>Tecido Nervoso</h4>
+				<h4>Tecido Nervoso (PDF)</h4>
 				
 				<div class="container">
 				  <embed src="files/bio/tecido_nervoso.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
