--- a/bio5.html
+++ b/bio5.html
@@ -68,7 +68,7 @@
 		<div>
 			
 			<div class="article">
-				<h4>Orgão dos Sentidos</h4>
+				<h4>Orgão dos Sentidos (PDF)</h4>
 				
 				<div class="container">
 				  <embed src="files/bio/ods.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
