--- a/bio1.html
+++ b/bio1.html
@@ -71,7 +71,7 @@
 				<h4>Sistema Respiratório Humano (PDF)</h4>
 				
 				<div class="container">
-				  <embed src="files/bio/sr.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
+				  <embed src="files/bio/sr.pdf#toolbar0" type="application/pdf" width="100%" height="600px"/> 
 				</div>
 				<p> Se estiver a usar android e não conseguir visualizar o doc pdf, por favor abra o site pelo chrome (Google chrome) </p>
 				
