--- a/bio3.html
+++ b/bio3.html
@@ -23,7 +23,11 @@
 			</li>
 			<li class="selected">
 				<a href="gallery.html">matéria</a>
-				<ul class="sub-menu"> 
+				<ul class="sub-menu">
+					
+                                       <li>
+					    <a href="gallery.html#Física">Física</a>
+					</li>
 				    <li>
 				          <a href="gallery.html#Matemática">Matemática</a>
 				      </li>
