--- a/bio5.html
+++ b/bio5.html
@@ -75,7 +75,7 @@
 				<h4>Orgão dos Sentidos (PDF)</h4>
 				
 				<div class="container">
-				  <embed src="files/bio/ods.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
+				 <object width="100" height="600" type="application/pdf" data="files/fisica/omer.pdf?#zoom=85&scrollbar=0&toolbar=0&navpanes=0">
 				</div>
 				<p> Se estiver a usar android e não conseguir visualizar o doc pdf, por favor abra o site pelo chrome (Google chrome) </p>
 			</div>
