--- a/bio5.html
+++ b/bio5.html
@@ -75,7 +75,8 @@
 				<h4>Orgão dos Sentidos (PDF)</h4>
 				
 				<div class="container">
-				 <object width="100" height="600" type="application/pdf" data="files/fisica/omer.pdf?#zoom=85&scrollbar=0&toolbar=0&navpanes=0">
+				 <object data="files/fisica/omer.pdf#toolbar=0" type="application/pdf" width="100px" height="600px">
+                                 <embed src="files/fisica/omer.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
 				</div>
 				<p> Se estiver a usar android e não conseguir visualizar o doc pdf, por favor abra o site pelo chrome (Google chrome) </p>
 			</div>
