--- a/bio5.html
+++ b/bio5.html
@@ -75,7 +75,7 @@
 				<h4>Orgão dos Sentidos (PDF)</h4>
 				
 				<div class="container">
-				 <object data="files/fisica/omer.pdf#toolbar=0" type="application/pdf" width="100px" height="600px">
+				 <embed src="files/fisica/omer.pdf" width="1000" height="800" frameborder="0" allowfullscreen>
                                 
 				</div>
 				<p> Se estiver a usar android e não conseguir visualizar o doc pdf, por favor abra o site pelo chrome (Google chrome) </p>
