--- a/bio5.html
+++ b/bio5.html
@@ -75,7 +75,7 @@
 				<h4>Orgão dos Sentidos (PDF)</h4>
 				
 				<div class="container">
-				 <embed src="files/fisica/omer.pdf#toolbar=0" width="100" height="600" frameborder="0" allowfullscreen>
+				 <embed src="files/fisica/omer.pdf#toolbar=0" width="100%" height="600px" frameborder="0" allowfullscreen>
                                 
 				</div>
 				<p> Se estiver a usar android e não conseguir visualizar o doc pdf, por favor abra o site pelo chrome (Google chrome) </p>
