--- a/bio5.html
+++ b/bio5.html
@@ -75,8 +75,8 @@
 				<h4>Orgão dos Sentidos (PDF)</h4>
 				
 				<div class="container">
-				 <embed src="files/fisica/omer.pdf#toolbar=0" type="application/word" width="100%" height="600px" frameborder="0" allowfullscreen>
-                                
+				  <iframe width="300%" height="400px" src="https://drive.google.com/file/d/1TjSAmJ2ATAUlO96iphx0ofpwZWgBPbge/view?usp=sharing"
+		  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 				<p> Se estiver a usar android e não conseguir visualizar o doc pdf, por favor abra o site pelo chrome (Google chrome) </p>
 			</div>
