--- a/bio5.html
+++ b/bio5.html
@@ -75,8 +75,8 @@
 				<h4>Orgão dos Sentidos (PDF)</h4>
 				
 				<div class="container">
-				  <iframe width="300%" height="400px" src="https://drive.google.com/file/d/1TjSAmJ2ATAUlO96iphx0ofpwZWgBPbge/view?usp=sharing"
-		  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				 <embed src="https://drive.google.com/viewerng/
+                                         viewer?embedded=true&url=https://drive.google.com/file/d/1s-sFd1wq9Il02bAh9tuBUhau01ZkGiat/view?usp=sharing" type="application/pdf" width="100%" height="600px"/>
 				</div>
 				<p> Se estiver a usar android e não conseguir visualizar o doc pdf, por favor abra o site pelo chrome (Google chrome) </p>
 			</div>
