--- a/bio5.html
+++ b/bio5.html
@@ -75,7 +75,7 @@
 				<h4>Orgão dos Sentidos (PDF)</h4>
 				
 				<div class="container">
-				 <iframe src="https://drive.google.com/file/d/1s-sFd1wq9Il02bAh9tuBUhau01ZkGiat/preview" width="100%" height="480px"></iframe>
+				 <iframe src="https://drive.google.com/file/d/1s-sFd1wq9Il02bAh9tuBUhau01ZkGiat/preview#toolbar=0" width="100%" height="480px"></iframe>
 				</div>
 				<p> Se estiver a usar android e não conseguir visualizar o doc pdf, por favor abra o site pelo chrome (Google chrome) </p>
 			</div>
