--- a/bio2.html
+++ b/bio2.html
@@ -74,9 +74,9 @@
 				<h4>Transporte de Gases Respiratórios (PDF)</h4>
 				
 				<div class="container">
-				  <embed src="files/bio/tdg.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
+				  <iframe src="https://drive.google.com/file/d/140JKXppPRQt3wBgditvMHBIaEiQnYQVY/preview" width="100%" height="600px"></iframe>
 				</div>
-				<p> Se estiver a usar android e não conseguir visualizar o doc pdf, por favor abra o site pelo chrome (Google chrome) </p>
+				
 			</div>
 		</div>
 	</div>
