--- a/bio3.html
+++ b/bio3.html
@@ -75,7 +75,7 @@
 				<h4>Sistema Respiratório das Aves (PDF)</h4>
 				
 				<div class="container">
-				  <embed src="files/bio/srda.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
+				  <iframe src="https://drive.google.com/file/d/1ZbFTRSsFRAwxuGiAPevUNNXi3w-ro3K_/preview" width="100%" height="600px"></iframe>
 				</div>
 				<p> Se estiver a usar android e não conseguir visualizar o doc pdf, por favor abra o site pelo chrome (Google chrome) </p>
 			</div>
