--- a/bio4.html
+++ b/bio4.html
@@ -75,7 +75,7 @@
 				<h4>Tecido Nervoso (PDF)</h4>
 				
 				<div class="container">
-				  <embed src="files/bio/tecido_nervoso.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/> 
+				  <iframe src="https://drive.google.com/file/d/1JechhjAnOecgzvQ6BjzulJeZuWDc1EEJ/preview" width="100%" height="600px"></iframe> 
 				</div>	
 				<p> Se estiver a usar android e não conseguir visualizar o doc pdf, por favor abra o site pelo chrome (Google chrome) </p>
 			</div>
