--- a/bio3.html
+++ b/bio3.html
@@ -75,7 +75,7 @@
 				<h4>Sistema Respiratório das Aves (PDF)</h4>
 				
 				<div class="container">
-				  <iframe style='width:100px;height:600px' src='https://online.pubhtml5.com/sgof/zfsj/'  seamless='seamless' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true' ></iframe>
+				  <iframe style='width:100%;height:600px' src='https://online.pubhtml5.com/sgof/zfsj/'  seamless='seamless' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true' ></iframe>
 				</div>
 				<p> Se estiver a usar android e não conseguir visualizar o doc pdf, por favor abra o site pelo chrome (Google chrome) </p>
 			</div>
