--- a/bio3.html
+++ b/bio3.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
+	<script src='//pubhtml5.com/plugin/LightBox/js/pubhtml5-light-box-api-min.js'></script>
 </head>
 <body>
 	<div id="header">
@@ -75,7 +76,7 @@
 				<h4>Sistema Respiratório das Aves (PDF)</h4>
 				
 				<div class="container">
-				  <iframe style='width:100%;height:600px' src='https://online.pubhtml5.com/sgof/zfsj/'  seamless='seamless' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true' ></iframe>
+				 data-rel='fh5-light-box-demo' data-href='https://online.pubhtml5.com/sgof/zfsj/' data-width='900' data-height='500' data-title='S. Respiratório das aves'
 				</div>
 				<p> Se estiver a usar android e não conseguir visualizar o doc pdf, por favor abra o site pelo chrome (Google chrome) </p>
 			</div>
