--- a/bio2.html
+++ b/bio2.html
@@ -74,7 +74,8 @@
 				<h4>Transporte de Gases Respiratórios (PDF)</h4>
 				
 				<div class="container">
-				  <iframe src="https://drive.google.com/file/d/140JKXppPRQt3wBgditvMHBIaEiQnYQVY/preview" width="100%" height="600px"></iframe>
+				<iframe  style="width:300px;height:500px"  src="index.html"seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true"></iframe>
+
 				</div>
 				
 			</div>
