--- a/bio5.html
+++ b/bio5.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Biologia/Orgãos dos sentidos - Cefhub</title>
+	<title>Biologia/Órgãos dos sentidos - Cefhub</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -72,10 +72,10 @@
 		<div>
 			
 			<div class="article">
-				<h4>Orgão dos Sentidos (PDF)</h4>
+				<h4>Órgãos dos Sentidos (PDF)</h4>
 				
 				<div class="container">
-				 <iframe src="https://drive.google.com/file/d/1Uq7hE7yegL9YpK9KG5ni8Fq72N9wRkQN/preview" width="100%" height="600px"></iframe>
+				  <iframe style='width:300px;height:500px' src='https://online.pubhtml5.com/sgof/ncik/'  seamless='seamless' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true' ></iframe>
 				</div>
 				<p> Se estiver a usar android e não conseguir visualizar o doc pdf, por favor abra o site pelo chrome (Google chrome) </p>
 			</div>
