--- a/bio4.html
+++ b/bio4.html
@@ -75,7 +75,7 @@
 				<h4>Tecido Nervoso (PDF)</h4>
 				
 				<div class="container">
-				  <iframe src="https://drive.google.com/file/d/1JechhjAnOecgzvQ6BjzulJeZuWDc1EEJ/preview" width="100%" height="600px"></iframe> 
+				 <iframe style='width:300px;height:500px' src='https://online.pubhtml5.com/sgof/spye/'  seamless='seamless' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true' ></iframe>
 				</div>	
 				<p> Se estiver a usar android e não conseguir visualizar o doc pdf, por favor abra o site pelo chrome (Google chrome) </p>
 			</div>
