--- a/bio3.html
+++ b/bio3.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Biologia/Sistema respiratório das aves - Cefhub</title>
+	<title>Biologia/Sistema respiratório das aves e dos mamíferos- Cefhub</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -73,7 +73,7 @@
 		<div>
 			
 			<div class="article">
-				<h4>Sistema Respiratório das Aves (PDF)</h4>
+				<h4>Sistema Respiratório das Aves e dos Mamíferos (PDF)</h4>
 				
 				<div class="container">
 				  <iframe style='width:300px;height:500px' src='https://online.pubhtml5.com/sgof/zfsj/'  seamless='seamless' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true' ></iframe>
