--- a/bio6.html
+++ b/bio6.html
@@ -70,9 +70,8 @@
 	<div id="body">
 		<h1><span>biologia</span></h1>
 		<div>
-			<iframe width="300" height="400" src="https://drive.google.com/file/d/1WHyDPrY70yzid55t1ADBr-NYlsE6Z3CZ/preview"
+			<iframe width="300" height="400" border-radius="11px" src="https://www.youtube.com/embed/jrjvsntpWrw"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			
 			<div class="article">
 				<h4>Sistema Nervoso</h4>
 			</div>
