--- a/bio6.html
+++ b/bio6.html
@@ -70,7 +70,7 @@
 	<div id="body">
 		<h1><span>biologia</span></h1>
 		<div>
-			<iframe width="300" height="400" border-radius="11px" src="https://www.youtube.com/embed/jrjvsntpWrw"
+			<iframe width="300" height="400" border-radius="11px" src="https://www.youtube.com/embed/jrjvsntpWrw?modestbranding=1&rel=0&autoplay=1&controls=1&showinfo=0"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<div class="article">
 				<h4>Sistema Nervoso</h4>
