--- a/bio7.html
+++ b/bio7.html
@@ -70,7 +70,7 @@
 	<div id="body">
 		<h1><span>biologia</span></h1>
 		<div>
-			<iframe width="300" height="400" src="https://www.youtube.com/embed/EWxL8j1qfYY"
+			<iframe width="300" height="400" src="https://www.youtube.com/embed/EWxL8j1qfYY?modestbranding=1&rel=0&autoplay=1&controls=1&showinfo=0"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<div class="article">
 				<h4>Sistema Urinário</h4>
