--- a/bio2.html
+++ b/bio2.html
@@ -76,6 +76,8 @@
 				<div class="container">
 				<iframe style='width:250px;height:500px' src='https://online.pubhtml5.com/sgof/oolp/'  seamless='seamless' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true' ></iframe>
 				</div>
+				<a href="bio1.html" class="previous">&laquo; Anterior</a> 
+                                <a href="bio3.html" class="next">Próximo &raquo;</a>
 				
 			</div>
 		</div>
