--- a/bio4.html
+++ b/bio4.html
@@ -77,6 +77,8 @@
 				<div class="container">
 				 <iframe style='width:250px;height:500px' src='https://online.pubhtml5.com/sgof/spye/'  seamless='seamless' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true' ></iframe>
 				</div>	
+				<a href="bio3.html" class="previous">&laquo; Anterior</a> 
+                                <a href="bio5.html" class="next">Próximo &raquo;</a>
 				
 			</div>
 		</div>
