--- a/bio5.html
+++ b/bio5.html
@@ -77,6 +77,8 @@
 				<div class="container">
 				  <iframe style='width:250px;height:500px' src='https://online.pubhtml5.com/sgof/ncik/'  seamless='seamless' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true' ></iframe>
 				</div>
+				<a href="bio4.html" class="previous">&laquo; Anterior</a> 
+                                <a href="bio6.html" class="next">Próximo &raquo;</a>
 				
 			</div>
 		</div>
