--- a/bio6.html
+++ b/bio6.html
@@ -75,6 +75,8 @@
 			<div class="article">
 				<h4>Sistema Nervoso</h4>
 			</div>
+			<a href="bio5.html" class="previous">&laquo; Anterior</a> 
+                        <a href="bio7.html" class="next">Próximo &raquo;</a>
 		</div>
 	</div>
 	<div id="footer">
