--- a/bio7.html
+++ b/bio7.html
@@ -74,8 +74,9 @@
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<div class="article">
 				<h4>Sistema Urinário</h4>
-				
 			</div>
+			  <a href="bio6.html" class="previous">&laquo; Anterior</a> 
+                          <a href="" class="next">Próximo &raquo;</a>
 		</div>
 	</div>
 	<div id="footer">
