--- a/bio3.html
+++ b/bio3.html
@@ -78,6 +78,8 @@
 				<div class="container">
 				  <iframe style='width:250px;height:500px' src='https://online.pubhtml5.com/sgof/zfsj/'  seamless='seamless' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true' ></iframe>
 				</div>
+				<a href="bio2.html" class="previous">&laquo; Anterior</a> 
+                                <a href="bio4.html" class="next">Próximo &raquo;</a>
 				
 			</div>
 		</div>
